--- a/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
@@ -61,12 +61,12 @@
 
          });
 
-         $("#tabs").tabs().css({
-             'height': '660px',
-             'overflow': 'auto',
-             /*'background': 'lightblue',*/
-             'font-size': '10pt'
-         });
+//         $("#tabs").tabs().css({
+//             'height': '660px',
+//             'overflow': 'auto',
+//             'background': 'lightblue',
+//             'font-size': '10pt'
+//         });
 
 
      });
