--- a/MyBusiness/MyBusiness/Views/EmPurses/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/EmPurses/Index.cshtml
@@ -44,12 +44,11 @@
 
          });
 
-         $("#tabs").tabs().css({
-             'height': '660px',
-             'overflow': 'auto',
-             /*'background': 'lightblue',*/
-             'font-size': '10pt'
-         });
+//         $("#tabs").tabs().css({
+//             'height': '660px',
+//             'overflow': 'auto',
+//             'font-size': '10pt'
+//         });
 
 
      });
