--- a/MyBusiness/MyBusiness/Views/Pants/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Pants/Index.cshtml
@@ -60,11 +60,11 @@
          $("#tabs").tabs({
 
          });
-         $("#tabs").tabs().css({
-             'height': '660px',
-             'overflow': 'auto',
-             'font-size': '10pt'
-         });
+//         $("#tabs").tabs().css({
+//             'height': '660px',
+//             'overflow': 'auto',
+//             'font-size': '10pt'
+//         });
 
      });
 
