--- a/MyBusiness/MyBusiness/Views/Shirts/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shirts/Index.cshtml
@@ -59,11 +59,11 @@
          $("#tabs").tabs({
 
          });
-         $("#tabs").tabs().css({
-             'height': '660px',
-             'overflow': 'auto',
-             'font-size': '10pt'
-         });
+//         $("#tabs").tabs().css({
+//             'height': '660px',
+//             'overflow': 'auto',
+//             'font-size': '10pt'
+//         });
 
      });
 
