added gauchos and dresses.

--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -118,19 +118,20 @@
                             <li class="@Html.ActivePage("GlitterShirts", "Index")">@Html.ActionLink("Shirts", "Index", "GlitterShirts")</li>
                             </ul>
                         </li>
-                        <li><a href="#">Embroidery</a>
+                        <!--<li><a href="#">Embroidery</a>
                             <ul class="sub_menu">
                             <li class="@Html.ActivePage("EmCaps", "Index")">@Html.ActionLink("Caps", "Index", "EmCaps")</li>
                             <li class="@Html.ActivePage("EmShirts", "Index")">@Html.ActionLink("Shirts", "Index", "EmShirts")</li>
                             <li class="@Html.ActivePage("EmPurses", "Index")">@Html.ActionLink("Purses", "Index", "EmPurses")</li>
                             </ul>
-                        </li>
+                        </li>-->
                         <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Shoes", "Index", "Shoes")</li>
                         <li class="@Html.ActivePage("Caps", "Index")">@Html.ActionLink("Caps", "Index", "Caps")</li>
                             <li><a href="#">Apparel</a>
                             <ul class="sub_menu">
                             <li class="@Html.ActivePage("Shirts", "Index")">@Html.ActionLink("Shirts", "Index", "Shirts")</li>
                             <li class="@Html.ActivePage("Pants", "Index")">@Html.ActionLink("Pants", "Index", "Pants")</li>
+                            <li class="@Html.ActivePage("Dress", "Index")">@Html.ActionLink("Dresses", "Index", "Dress")</li>
                             <li class="@Html.ActivePage("RhineStones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
                             </ul>
                             </li>
