changes to tabs.

--- a/MyBusiness/MyBusiness/Views/Dress/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Dress/Index.cshtml
@@ -17,7 +17,7 @@
 
      function UpdateWomen() {
          $.ajax({
-             url: '@Url.Action("ReloadDressWomen", "Shoes")',
+             url: '@Url.Action("ReloadDressWomen", "Dress")',
              data: {},
              type: 'POST',
              success: function (data) {
