--- a/MyBusiness/MyBusiness/Views/Gauchos/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Gauchos/Index.cshtml
@@ -17,7 +17,7 @@
 
      function UpdateWomen() {
          $.ajax({
-             url: '@Url.Action("ReloadGauchosWomen", "Shoes")',
+             url: '@Url.Action("ReloadGauchosWomen", "Gauchos")',
              data: {},
              type: 'POST',
              success: function (data) {
