--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -132,6 +132,7 @@
                             <li class="@Html.ActivePage("Shirts", "Index")">@Html.ActionLink("Shirts", "Index", "Shirts")</li>
                             <li class="@Html.ActivePage("Pants", "Index")">@Html.ActionLink("Pants", "Index", "Pants")</li>
                             <li class="@Html.ActivePage("Dress", "Index")">@Html.ActionLink("Dresses", "Index", "Dress")</li>
+                            <li class="@Html.ActivePage("Gauchos", "Index")">@Html.ActionLink("Gauchos", "Index", "Gauchos")</li>
                             <li class="@Html.ActivePage("RhineStones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
                             </ul>
                             </li>
