--- a/MyBusiness/MyBusiness/Content/Site.css
+++ b/MyBusiness/MyBusiness/Content/Site.css
@@ -228,6 +228,7 @@ ul#menu li.selected a
     overflow: auto;
     font-size: 10pt;  
     border: none;
+    z-index:inherit;
 }
 
 
@@ -411,9 +412,9 @@ footer
 
     #tabs
     {
-    height: 400px;
-    overflow: auto;
-    font-size: 10pt;  
+        height: 400px;
+        overflow: auto;
+        font-size: 10pt;
     }
     /* header
         ----------------------------------------------------------*/
